// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Accordion is large 1`] = `
<div>
  <div
    class="accordion-container accordion-border pill"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="false"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary large"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <span>
            Accordion Header
          </span>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body border-top large"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Accordion is medium 1`] = `
<div>
  <div
    class="accordion-container accordion-border pill"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="false"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary medium"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <span>
            Accordion Header
          </span>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body border-top medium"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Accordion is not bordered 1`] = `
<div>
  <div
    class="accordion-container pill"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="false"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary large"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <span>
            Accordion Header
          </span>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body large"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Accordion is pill shaped 1`] = `
<div>
  <div
    class="accordion-container accordion-border pill"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="false"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary large"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <span>
            Accordion Header
          </span>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body border-top large"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Accordion is rectangle shaped 1`] = `
<div>
  <div
    class="accordion-container accordion-border rectangle"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="false"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary large"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <span>
            Accordion Header
          </span>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body border-top large"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Accordion renders custom content and its buttons are clickable 1`] = `
<div>
  <div
    class="accordion-container accordion-border pill"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="true"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary accordion-summary-full-width medium accordion-summary-expanded"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      style="gap: 8px;"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <div
            class="octuple layout"
          >
            <div
              class="stack full-width horizontal undefined gap-m"
              style="justify-content: space-between; flex-wrap: wrap;"
            >
              <div
                class="stack vertical undefined gap-xxxs"
              >
                <h4
                  class="octuple-h4"
                  style="align-self: center; flex-wrap: nowrap; margin: 0px; white-space: nowrap;"
                >
                  Accordion Header 
                  <span
                    class="badge badge-medium"
                    style="margin: 0px 8px;"
                  >
                    2
                  </span>
                </h4>
                <div
                  class="octuple-content"
                  style="font-weight: 400;"
                >
                  <span>
                    Supporting text
                  </span>
                </div>
              </div>
              <div
                class="stack horizontal undefined gap-m"
                style="align-items: center; justify-content: flex-end;"
              >
                <div>
                  <ul
                    class="list-container"
                    style="display: flex; gap: 8px;"
                  >
                    <li
                      class="list-item"
                    >
                      <button
                        aria-disabled="false"
                        aria-label="Button 0"
                        class="button button-neutral button-medium round-shape icon-left"
                      >
                        <span
                          class="icon icon-wrapper"
                          role="presentation"
                        >
                          <svg
                            role="presentation"
                            style="width: 20px; height: 20px;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12,8A4,4 0 0,1 16,12A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8M12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12A2,2 0 0,0 12,10M10,22C9.75,22 9.54,21.82 9.5,21.58L9.13,18.93C8.5,18.68 7.96,18.34 7.44,17.94L4.95,18.95C4.73,19.03 4.46,18.95 4.34,18.73L2.34,15.27C2.21,15.05 2.27,14.78 2.46,14.63L4.57,12.97L4.5,12L4.57,11L2.46,9.37C2.27,9.22 2.21,8.95 2.34,8.73L4.34,5.27C4.46,5.05 4.73,4.96 4.95,5.05L7.44,6.05C7.96,5.66 8.5,5.32 9.13,5.07L9.5,2.42C9.54,2.18 9.75,2 10,2H14C14.25,2 14.46,2.18 14.5,2.42L14.87,5.07C15.5,5.32 16.04,5.66 16.56,6.05L19.05,5.05C19.27,4.96 19.54,5.05 19.66,5.27L21.66,8.73C21.79,8.95 21.73,9.22 21.54,9.37L19.43,11L19.5,12L19.43,13L21.54,14.63C21.73,14.78 21.79,15.05 21.66,15.27L19.66,18.73C19.54,18.95 19.27,19.04 19.05,18.95L16.56,17.95C16.04,18.34 15.5,18.68 14.87,18.93L14.5,21.58C14.46,21.82 14.25,22 14,22H10M11.25,4L10.88,6.61C9.68,6.86 8.62,7.5 7.85,8.39L5.44,7.35L4.69,8.65L6.8,10.2C6.4,11.37 6.4,12.64 6.8,13.8L4.68,15.36L5.43,16.66L7.86,15.62C8.63,16.5 9.68,17.14 10.87,17.38L11.24,20H12.76L13.13,17.39C14.32,17.14 15.37,16.5 16.14,15.62L18.57,16.66L19.32,15.36L17.2,13.81C17.6,12.64 17.6,11.37 17.2,10.2L19.31,8.65L18.56,7.35L16.15,8.39C15.38,7.5 14.32,6.86 13.12,6.62L12.75,4H11.25Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </span>
                      </button>
                    </li>
                    <li
                      class="list-item"
                    >
                      <button
                        aria-disabled="false"
                        aria-label="Button 1"
                        class="button button-secondary button-secondary-disruptive button-medium round-shape icon-left"
                      >
                        <span
                          class="icon icon-wrapper"
                          role="presentation"
                        >
                          <svg
                            role="presentation"
                            style="width: 20px; height: 20px;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </span>
                      </button>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button expanded-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container show"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body show border-top medium"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Renders without crashing 1`] = `
<div>
  <div
    class="accordion-container accordion-border pill"
    data-testid="test-accordion"
  >
    <div
      aria-controls="myAccordionId-content"
      aria-expanded="false"
      aria-labelledby="myAccordionId-header-content"
      class="accordion-summary large"
      data-testid="accordion-header-clickable-area"
      id="myAccordionId-header"
      role="button"
      tabindex="0"
    >
      <div
        class="accordion-header-container"
        id="myAccordionId-header-content"
      >
        <span
          class="icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
              style="fill: green;"
            />
          </svg>
        </span>
        <div
          class="accordion-header"
        >
          <span>
            Accordion Header
          </span>
        </div>
        <span
          class="badge badge-medium badge"
        >
          2
        </span>
      </div>
      <button
        aria-hidden="true"
        class="accordion-icon-button button button-neutral button-medium round-shape disabled icon-left"
        data-testid="accordian-arrow-button"
        disabled=""
        tabindex="-1"
      >
        <span
          class="icon accordion-icon-button icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      aria-labelledby="myAccordionId-header"
      class="accordion-body-container"
      id="myAccordionId-content"
      role="region"
    >
      <div
        class="accordion-body border-top large"
      >
        <div
          style="height: auto;"
        >
          Icons are optional for accordions. The body area in the expanded view is like a modal or a slide-in panel. You can put any smaller components inside to build a layout.
        </div>
      </div>
    </div>
  </div>
</div>
`;
